2011-10-05 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.m
	* Source/DKBoxingUtils.m:
	Small bugfixes for problems detected by clang.

2011-10-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProperty.h: Expose change notification check method.
	* Source/DKProxy.m: Implement -automaticallyNotifiesObserversForKey:

	Start working on KVO support.

2011-10-01 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKProperty.m: Implement check whether the property emits change
	notifications.
	* Source/DKPropertyMethod.m: Ensure that mutators are KVC-compliant.
	* Source/DKMethod
	* Source/DKPropertyMethod.m:
	Fix generation of mutator declarations.
	* Documentation/UsingDBus.texi:
	Update docs on property mutators.

	Make properties somewhat KVC-compliant. NOTE: This constitutes an API
	break. If you have code that sets a D-Bus property foo by calling
	-setfoo: please change that to -setFoo:.

2011-10-01 Niels Grewe <niels.grewe@halbordnung.de>
	
	* Source/DKProperty.h
	* Source/DKProperty.m:
	Implement emission of Objective-C 2 style @property declarations.
	* Source/DKInterface.h
	* Source/DKInterface.m:
	Modify to expose different property declaration styles.
	* Tools/dk_make_protocol.m: Implement switch between Objective-C 1 and
	2.
	* Documentation/UsingDBus.texi: Document new feature of
	dk_make_protocol.

2011-09-25 Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/TestDKProxy.m: Type conversion test.

2011-09-25 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKBoxingUtils.h
	* Source/DKBoxingUtils.m
	* Source/DKArgument.m
	* Source/DKMethod.m:
	Implement conversion between primitive types.

2011-09-24 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKMethod.m
	* Source/DKPropertyMethod.m:
	Fix generation of declarations for property accessors/mutators.

2011-09-24 Niels Grewe <niels.grewe@halbordnung.de>

	* Documentation/UsingDBus.texi: Updated information about runtime
	interaction.
